--- a/.config/gtk-4.0/settings.ini
+++ b/.config/gtk-4.0/settings.ini
@@ -1,7 +1,7 @@
 #gtk-theme-name = 
 #gtk-icon-theme-name = 
 [Settings]
-gtk-theme-name=Ayu_Dark
+gtk-theme-name=Adwaita-dark
 gtk-font-name=DinaRemasterII 12
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
